style.css
* {
  /* overflow-x: hidden; */
  margin: 0;
  padding: 0;
  -webkit-box-sizing: content-box;
  box-sizing: content-box;
}

html {
  scroll-behavior: smooth;
}

body {
  color: #222;
  font-family: 'Montserrat', sans-serif;
  padding: 0;
  margin: 0;
  background-color: #d2d2d2;
  min-height: 100vh;
}

button:focus {
  outline: none;
  -webkit-box-shadow: 0 0 0 5px rgb(12, 52, 98);
  box-shadow: 0 0 0 5px rgb(12, 52, 98);
}

.color-white {
  color: white;
}

ul {
  list-style: none;
}

hr {
  width: 33%;
  height: 2px;
  background-color: #2196f3;
  border: 0;
  text-align: center;
  margin: 20px auto;
  clear: both;
}

.home-link {
  text-decoration: none;
  -webkit-transform: translateY(-10px) translateX(-12px);
  transform: translateY(-10px) translateX(-12px);
  color: inherit;
  background-image: url('images/logo-menu.png');
  background-repeat: no-repeat;
  background-position: left;
  background-size: contain;
  width: 10%;
  height: 80px;
}

#mainTitle {
  text-align: center;
  font-size: 3em;
  text-shadow: 2px 2px black;
  color: white;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  margin: auto;
  padding: 3px;
  -webkit-text-decoration-style: solid;
  text-decoration-style: solid;
  vertical-align: middle;
}

.intro-text {
  color: black;
  font-size: 2em;
  text-align: center;
}

.width-10 {
  width: 10%;
}

.width-15 {
  width: 15%;
}

.width-20 {
  width: 20%;
}

.width-70 {
  width: 70%;
}

.width-75 {
  width: 75%;
}

.width-80 {
  width: 80%;
}

.bg-cms {
  background-color: #1f9bde;
}

.bg-cms-light {
  background-color: #8bc7ea;
}

.text-cms-light {
  color: #8bc7ea;
}

.br-5 {
  border-radius: 5px;
}

.main-nav {
  background-color: #fff;
  padding-bottom: 0;
  padding-right: 0;
  position: relative;
  z-index: 999;
}

.stripe {
  min-height: 4.85em;
  transform: translateY(-0.65em);
  border-top-left-radius: 0;
  padding-right: 170px;
  border-bottom-left-radius: 15px;
}

.stripe::after {
  content: ' ';
  position: absolute;
  display: block;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  z-index: -1;
  background: inherit;
  border-radius: inherit;
  -webkit-transform-origin: bottom right;
  transform-origin: bottom right;
  -webkit-transform: skew(10deg, 0deg);
  transform: skew(10deg, 0deg);
}

.main-nav-li {
  font-size: 1.25em;
  text-align: right;
  list-style-type: none;
  display: inline;
  padding: 0;
  color: white;
  -webkit-transition: all ease-in 0.12s;
  transition: all ease-in 0.12s;
}

.main-nav-li:not(:first-child)::before {
  color: white;
  content: ' | ';
}

.main-nav-li:hover {
  color: black;
}

.main-nav-li a {
  display: inline-block;
  color: inherit;
}

.main-nav-li a:hover {
  text-decoration: none;
}

.make-appointment {
  -webkit-transform: translateY(-0.1em);
  transform: translateY(-0.1em);
  height: 4.55em;
  width: 180px;
  border-bottom-left-radius: 15px;
  position: absolute;
  top: 0;
  right: 0;
}

.make-appointment::after {
  content: ' ';
  position: absolute;
  display: block;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  z-index: -1;
  background: inherit;
  border-radius: inherit;
  -webkit-transform-origin: bottom right;
  transform-origin: bottom right;
  -webkit-transform: skew(10deg, 0deg);
  transform: skew(10deg, 0deg);
}

.make-appointment p {
  font-size: 1.2em;
  position: absolute;
  bottom: -0.8em;
  right: 1em;
}

/* #secondaryNav {
  position: relative;
  z-index : 998;
} */

.navbar-supported-content {
  width: 100%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
}

.nav-item {
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  padding: 0.2em 0.5em 0;
  -webkit-transition: all 0.25s;
  transition: all 0.25s;
  border: 1px solid transparent;
  border-radius: 0.5em;
  width: 8rem;
}

.nav-item:hover {
  cursor: pointer;
  -webkit-box-shadow: 0 0 15px grey;
  box-shadow: 0 0 15px grey;
  background-color: white;
}

.nav-item:hover {
  color: #4b82ea;
}

.nav-item a {
  text-decoration: none;
  color: inherit;
}

.specialty-name {
  border-top: 1px solid cadetblue;
  border-bottom: 1px solid cadetblue;
  background: rgba(139, 199, 234, 0.3);
  font-weight: bold;
}

.specialty-doctor::before {
  content: '· ';
  padding-left: 1em;
}

.body-wrapper {
  position: relative;
  z-index: 9;
}

.collab-cliniques {
  position: absolute;
  bottom: 0;
  right: 1em;
  width: 18em;
  border-top-left-radius: 15px;
  border-top-right-radius: 15px;
  -webkit-transition: all ease-in-out 0.5s;
  transition: all ease-in-out 0.5s;
  z-index: 9;
  text-align: center;
}

.collab-cliniques-title {
  border-top-left-radius: inherit;
  border-top-right-radius: inherit;
  height: 2em;
  font-size: 1.3em;
  padding-top: 1em;
}

.collab-cliniques-separator {
  width: 100%;
  padding: 0;
  margin: 0;
  background-color: white;
}

.collab-cliniques-images {
  position: relative;
  bottom: 0;
  height: 0;
  -webkit-transform: scaleY(0);
  transform: scaleY(0);
  opacity: 0;
  transition: opacity 0.2s ease-in-out, transform 0s ease-in-out 0.2s, height 0.2s ease-in-out 0.2s;
}

.collab-cliniques-images img {
  margin: 1em 0;
}

.collab-cliniques:hover .collab-cliniques-images {
  height: 15.7em;
  -webkit-transform: scaleY(1);
  transform: scaleY(1);
  opacity: 1;
  transition: height 0.2s ease-in-out, transform 0s ease-in-out, opacity 0.2s ease-in-out 0.2s;
}

.page-container {
  position: relative;
  min-height: 100vh;
}

.content-wrapper {
  min-height: 100vh;
  padding-bottom: 12em;
}

footer {
  position: absolute;
  bottom: 0;
  height: 10em;
  color: white;
  text-align: center;
  padding: 1em 0;
  display: block;
  width: 100%;
}

footer p {
  text-transform: uppercase;
  font-size: 1.2em;
  color: rgba(255, 255, 255, 0.6);
}

footer ul {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -ms-flex-direction: row;
  flex-direction: row;
}

footer ul li {
  margin: 0 8px;
}

footer a {
  font-size: 1.2em;
  cursor: pointer;
}

footer a:hover {
  color: white;
  -webkit-transform: scale(1.2);
  transform: scale(1.2);
}

/* Styles el-centre.html */

.big-margin-y {
  margin-top: 10em;
  margin-bottom: 10em;
}

.section-grid {
  /* grid */
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr;
  grid-template-areas:
    'title title image image'
    'text text image image';
}

.section-title {
  /* grid */
  grid-area: title;
  /* looks */
  color: #1f9bde;
  font-size: 5em;
  line-height: 1.2em;
  border-bottom: 1px solid #1f9bde;
}

.section-text {
  /* grid */
  grid-area: text;
  /* looks */
  font-size: 1.2em;
  padding-right: 0.8em;
  padding-top: 0.5em;
  text-align: justify;
}

.section-image {
  /* grid */
  grid-area: image;
  /* looks */
}

.entrada-principal {
  background-image: url('images/elCentre/entrada-principal.jpg');
}

.centre-interior {
  background-image: url('images/elCentre/centre-interior.jpg');
}

.exterior {
  background-image: url('images/elCentre/exterior.jpg');
  display: block;
  width: 110%;
}

.img-hover-zoom-container {
  width: 100%;
  height: 350px;
  overflow: hidden;
}

.img-hover-zoom-container div {
  width: inherit;
  height: inherit;
  background-position: center;
  background-size: cover;
  transition: all 0.5s ease;
  transform: scale(1.2);
}

.img-hover-zoom-container:focus div,
.img-hover-zoom-container:hover div {
  transform: scale(1.4);
}

/* END Styles el-centre.html */

@media (max-width: 992px) {
  *{
    overflow-x: hidden;
  }

  html {
    font-size: 1em;
  }

  #mainTitle {
    font-size: 1em;
  }

  .intro-text {
    font-size: 1.2em;
  }

  .navbar {
    padding-left: 0;
  }

  .home-link {
    margin-left: 1rem;
    margin-top: 1rem;
    width: 8em;
  }

  .main-nav {
    padding-top: 0.25em;
    padding-bottom: 0.25em;
  }

  .stripe {
    padding-right: 0.5em;
    padding-bottom: 0.1em;
    padding-top: 0.1em;
    margin-top: 0.1em;
    border-bottom-left-radius: 0;
    transform: translateY(0);
  }

  .stripe::after {
    content: '';
    display: none;
  }

  .main-nav-ul{
    margin: 0.8em auto;
  }
  .main-nav-li{
    margin: auto;
  }

  .main-nav-li:not(:first-child)::before {
    content: '-';
    display: block;
    text-align: center;
  }

  .make-appointment {
    display: none;
  }

  .navbar-supported-content {
    flex-wrap: wrap;
  }

  .collab-cliniques {
    display: none;
  }



  /* START Styles el-centre.html */

  .section-grid {
    /* grid */
    display: grid;
    grid-template-columns: 100%;
    grid-template-rows: 8em 350px auto;
    grid-template-areas:
      'title'
      'image'
      'text';
  }

  .section-title{
    font-size: 3em;
    border-bottom: none;
  }
}

